WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105627
[WK2] TiledBackingStore: Scroll position is not reset when new page is loaded
https://bugs.webkit.org/show_bug.cgi?id=105627
Summary
[WK2] TiledBackingStore: Scroll position is not reset when new page is loaded
Mikhail Pozdnyakov
Reported
2012-12-21 04:23:10 PST
Scroll position is not updated when new page is loaded. However it should be set to (0,0) for the newly loaded pages.
Attachments
patch
(4.89 KB, patch)
2012-12-21 04:58 PST
,
Mikhail Pozdnyakov
kenneth
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
fixed changelog
(4.93 KB, patch)
2012-12-21 05:14 PST
,
Mikhail Pozdnyakov
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mikhail Pozdnyakov
Comment 1
2012-12-21 04:58:02 PST
Created
attachment 180503
[details]
patch
WebKit Review Bot
Comment 2
2012-12-21 05:08:49 PST
Comment on
attachment 180503
[details]
patch Rejecting
attachment 180503
[details]
from commit-queue. Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', u'--status-host=queues.webkit.org', ..." exit_code: 1 cwd: /mnt/git/webkit-commit-queue /mnt/git/webkit-commit-queue/LayoutTests/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/15445455
Mikhail Pozdnyakov
Comment 3
2012-12-21 05:14:43 PST
Created
attachment 180504
[details]
fixed changelog
WebKit Review Bot
Comment 4
2012-12-21 05:41:48 PST
Comment on
attachment 180504
[details]
fixed changelog Clearing flags on attachment: 180504 Committed
r138367
: <
http://trac.webkit.org/changeset/138367
>
WebKit Review Bot
Comment 5
2012-12-21 05:41:52 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug