[WK2] TiledBackingStore: Scroll position is not reset when new page is loaded https://bugs.webkit.org/show_bug.cgi?id=105627

Reviewed by Kenneth Rohde Christiansen.

Source/WebKit2:

Reset scroll position to (0,0) when new page is loaded.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::sendViewportAttributesChanged):

LayoutTests:

Added a layout test checking scroll position for newly loaded pages.

* fast/dom/resources/check-scroll-position-onload.html: Added.
* fast/dom/scroll-position-for-new-loads-expected.txt: Added.
* fast/dom/scroll-position-for-new-loads.html: Added.


Canonical link: https://commits.webkit.org/123852@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138367 268f45cc-cd09-0410-ab3c-d52691b4dbfc